namespace Core
{
    public interface IDisplay
    {
        public void DisplayUserInstructions(string s);
        public void DisplayChargingMessage(string s);
    }
}